# SFML3-DeadCell

./: CMakeLists.txt  Main.cpp  explain.md
atlas/: change2.py  change3.py
atlas/beheaded/: change1.py
atlas/player/: 说明.txt
data/: PlayerAnim.txt
include/: Animation.h  Game.h  Global.h  Physics.h  Player.h  PlayerState.h
src/: Animation.cpp  Game.cpp  Physics.cpp  Player.cpp  PlayerState.cpp
